# xyzutils

Archive/coordination/: AUTHORS  configure.ac
Archive/coordination/src/: coord.cpp
Archive/rdf/: .gitignore
Archive/xed/: AUTHORS
Archive/xed/include/: Selector.hpp
Archive/xed/src/: Atom.cpp  Selector.cpp
Archive/xyzeval/: Makefile.am
coordination/: .gitignore  Makefile.am  README
excr/: TODO  excr.cpp  excr.hpp
rdf/: .gitignore  AUTHORS  COPYING  Makefile.am  README  configure.ac  main.cpp  makefile
splitxyz/: .gitignore  AUTHORS  Makefile.am  README  README.md  configure.ac  makefile  splitxyz.cpp
splitxyz/src/: splitxyz.cpp
xed/: .gitignore  Makefile.am  README  configure.ac  convert.cpp  main.cpp  makefile
xed/include/: Atom.hpp  AtomSet.hpp  Command.hpp  convert.hpp
xed/src/: AtomSet.cpp  Command.cpp  main.cpp
xyhist/: .gitignore  hist  hist.cpp  makefile
xyzeval/: .gitignore  AUTHORS  Makefile.am  README  configure.ac  makefile
xyzeval/include/: Atom.hpp  Bond.hpp  BondMap.hpp  CoordinationCutoffs.hpp  CoordinationHistogramData.hpp  SquareSelector.hpp  Type.hpp  TypeVec.hpp  convert.hpp  excr.hpp  utils.hpp
xyzeval/src/: Bond.cpp  BondMap.cpp  CoordinationCutoffs.cpp  CoordinationHistogramData.cpp  Type.cpp  convert.cpp  main.cpp  utils.cpp
