AUTOMAKE_OPTIONS = subdir-objects
ACLOCAL_AMFLAGS = ${ACLOCAL_FLAGS}

#CPPFLAGS += -Iinclude

#lib_LTLIBRARIES = libTHIS.la
#libArgumentParser_la_SOURCES = src/....cpp
#libArgumentParser_la_LDFLAGS = -version-info 0:0:0
#include_HEADERS = include/THIS.h

bin_PROGRAMS = coordination
coordination_SOURCES = src/coord.cpp

#bin_SCRIPTS = src/*.sh

