AUTOMAKE_OPTIONS = subdir-objects
ACLOCAL_AMFLAGS = ${ACLOCAL_FLAGS}

#CPPFLAGS += -Iinclude
AM_CPPFLAGS = -fopenmp

#lib_LTLIBRARIES = libTHIS.la
#libArgumentParser_la_SOURCES = src/....cpp
#libArgumentParser_la_LDFLAGS = -version-info 0:0:0
#include_HEADERS = include/THIS.h

bin_PROGRAMS = splitxyz
splitxyz_SOURCES = src/splitxyz.cpp
splitxyz_LDFLAGS = -lArgumentParser

#bin_SCRIPTS = src/*.sh

