AUTOMAKE_OPTIONS = subdir-objects
ACLOCAL_AMFLAGS = ${ACLOCAL_FLAGS}

CPPFLAGS += -Iinclude

#lib_LTLIBRARIES = libTHIS.la
#libArgumentParser_la_SOURCES = src/....cpp
#libArgumentParser_la_LDFLAGS = -version-info 0:0:0
#include_HEADERS = include/THIS.h

bin_PROGRAMS = xed
xed_SOURCES = src/Atom.cpp src/AtomSet.cpp src/Command.cpp src/Selector.cpp src/convert.cpp src/main.cpp

#bin_SCRIPTS = src/*.sh

